[tool.poetry]
name = "analysea"
version = "0.1.0"
description = ""
authors = ["Thomas Saillour <saillour.thomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
adlfs = "*"
azure-identity = "*"
cartopy = "*"
eccodes = "*"
fastparquet = "*"
fsspec = "*"
geopandas = "*"
jupyter-bokeh = "*"
lttb = "*"
matplotlib = "*"
observer = {git = "https://github.com/seareport/observer.git"}
owslib = "*"
pandas = "*"
pyarrow = "*"
pyposeidon = {git = "https://github.com/ec-jrc/pyPoseidon.git"}
ruptures = "*"
scikit-image = "*"
searvey = "*"
shapely = "*"
thalassa = {git = "https://github.com/ec-jrc/Thalassa.git"}
utide = "*"
xarray = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
ipympl = "*"
mypy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 108
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "C90",  # mccabe
]
ignore = [
    "E501", # line-too-long
]

[tool.black]
line-length = 108
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true
